--- a/templates/site/fpform.html
+++ b/templates/site/fpform.html
@@ -52,6 +52,7 @@
      -->
 <!-- PRODUCT Form -->
 <!-- <div class="container-fluid"> -->
+  <h4>{{ form.errors }}</h4>
   <form method="POST">
     {% csrf_token %}
     <div class="row justify-content-center">
@@ -152,7 +153,7 @@
   </div>
     <div class="container">
 
-      <button type="submit" class="btn btn-primary">Add Fiche Produit</button>
+      <button type="submit" class="btn btn-primary">{{ submit_button_name }}</button>
     </div>
 
   </form>
