--- a/templates/site/fpdetail.html
+++ b/templates/site/fpdetail.html
@@ -7,8 +7,7 @@
 
   
 {% block content %}
-
-{{ fps }}
+<a href="{% url 'fplist' %}" class="btn btn-lg btn-warning border border-dark">Back to Full List of Fiche Produits</a>
 
 <br><br><br><br><br>
 {{ fps.product.name_fr }}
