--- a/templates/site/site.html
+++ b/templates/site/site.html
@@ -84,7 +84,8 @@ html {
 {% endblock %}
 
 {% block content %}
-<a href="{% url 'products' %}" class="btn btn-lg btn-warning">Create New Fiche Produit</a>
+<a href="{% url 'fplist' %}" class="btn btn-lg btn-warning border border-dark">See All List Of Fiche Produit</a>
+<a href="{% url 'products' %}" class="btn btn-lg btn-warning border border-dark">Create New Fiche Produit</a>
 <!-- Search -->
 <section style="padding-top: 10px;">
   <div class="container">
