--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'achat' %}"">See Achat Dashboard</a>
-                    <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'hgcreate' %}"">Create HG order</a>
+                    <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'orderlist' %}"">See List of All Orders</a>
                     <!-- <button type="button" class="btn btn-sm btn-primary m-1 w-50" style="height: 60px;">See list of HG orders</button>
                     <button type="button" class="btn btn-sm btn-primary m-1" style="height: 60px;">Create HG order</button> -->
                   </div>
